[project]
name = "youth-earning-potential"
version = "1.0.0"
description = "Predicting youth earning potential in Rwanda from education, location and sector, in support of youth employment and skills-access initiatives."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["summative"]
